add marcação de palavras proibidas e blockquote

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ texto-para-tabela.html
 melhorias.txt
 teste-code.html
 teste-colunas.html
+check-list-mauricio.txt
+teste2.html
+converte-texto-longo.html
