add foto valendo, lista de imagens, update (ol) e outros

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-converter1.html
-converter1-1.html
-testes.html
-texto-para-tabela.html
-teste-code.html
-teste-colunas.html
-check-list-mauricio.txt
-teste2.html
-converte-texto-longo.html
+testes
